Update and rename README.md to index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   배경의 종류는 3가지가 있고 마우스를 클릭하면 3개의 배경이 반복되어 나타납니다.<br>
   <a href= "https://jmyoo55.github.io/rene/" target="_blank" title = "르네 마그리트- 위대한 가족">르네 마그리트 - 위대한 가족</a></p>
   <p><h3>(2)칸딘스키- 몇개의 원</h3>
-  키보드 'd'를 누르면 중심쪽에 큰원이 생기고, 큰원의 색깔은 y좌표에 따라 변합니다.<br>
+  키보드 'd'를 누르면 중심쪽에 큰원이 생기고, 큰원의 색깔은 y좌표에 따라 변합니다.(처음에 'd'를 여러번 눌러주면 큰원이 더 잘 생깁니다)<br>
   화살표 키보드를 누르면 가운데의 큰원이 화살표의 방향에 따라 움직입니다.<br>
    키보드를 눌러 가운데의 큰원의 크기를 변화시킬 수 있습니다. ('a' : 크게 , 's' : 작게, 'd' : 원래 크기로 )<br>
   <a href= "https://jmyoo55.github.io/kandinsky/" target="_blank" title = "칸딘스키 - 몇개의 원">칸딘스키 - 몇개의 원</a></p>
