--- a/index.html
+++ b/index.html
@@ -26,5 +26,7 @@
    (사람 움직임 - 키보드 'w':위, 's':아래, 'a':왼쪽 'd':오른쪽)<br>
    마우스를 클릭하면 배가 점점 밝아지고 배가 거의 흰색이 되면 다시 검은색으로 바뀝니다.<br>
    <a href= "https://jmyoo55.github.io/vanGogh/" target="_blank" title= "빈센트 반고흐 - 론강의 별이 빛나는 밤">빈센트 반고흐 - 론강의 별이 빛나는 밤</a></p>
- </body>
+ 
+ <h3> <a href= "https://jmyoo55.github.io/RJM-gallery/"> 뒤로가기 </a></h3>
+</body>
  </html>
